# analise_de

./: Dockerfile  README.md  alerta_processos.xlsx  app.py  final_tempo_real.xlsx  novo_tempo_real.xlsx  pendentes.csv  pyproject.toml  quantidade_processos.xlsx  qunt_processos_pje.csv  qunt_processos_pje.xlsx  transform_tempo_real.py
data/: final_tempo_real.xlsx
