[project]
name = "analise-de-processos"
version = "0.1.0"
description = ""
authors = [
    {name = "Fasri",email = "felipeasr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
